fix iframe overflow in posts

--- a/khoBlog/static/khoBlog/css/main.scss
+++ b/khoBlog/static/khoBlog/css/main.scss
@@ -161,7 +161,9 @@ aside p:last-child {
         }
     }
 
-    & img {
+    & iframe,
+    video,
+    img {
         max-width: 100%;
     }
 
